Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


pkgcore 0.7.1: Sep 3rd, 2011

* add TIMESTAMP header to binpkg Packages cache.

* mangle and add compatibility to source_repository handling to make
  it play nice w/ past transgressions, and generate in a form portage
  will like.

* fix traceback in binpkg installation

* fix pclone_cache hang

* suppress spurious slot shadowing test failure; occurs dependant on
  GC behaviour, the complaint however doesn't matter (it false-negatives
  on a mock object used for tests).


pkgcore 0.7: Sep 2nd, 2011

* pmaint regen now supports regenerating binary and install repository
  caches.

* pkgcore now tracks and records the originating/source repository
  when installing to the vdb.

* new pkg attribute; source_repository.  This tracks where a package
  originated from- primarily useful for binpkgs and vdb.
  pquery --attr source_repository is how to access it from the CLI.

* pkg_config can now be invoked via:
  pconfig package <target>

* splitdebug no longer runs if the pkg has been split already.

* arbitrary exceptions during merging/unmerging no longer stop the
  merge/unmerge; a traceback is displayed instead.

* added initial profile inspection tool; pinspect profiles.

* pmaint copy arguments have changed; check the help, short version,
  it's now sane.

* pkgcore now lives at googlecode; http://pkgcore.googlecode.com/

* large scale conversion of internals to argparse.  Saner parsing namely,
  although it's still a work in progress to make it pretty.

* man pages and docs in general have been converted to sphinx.  Definite
  improvement already, but more to come.

* pkgcore observer api's were heavily gutted and split into observer and
  outputter.  This should enable easier UX integration, while enabling
  our next step towards parallelization.


pkgcore 0.6.6: July 11th, 2011
